# SolveIt_rust

./: .gitignore  .gitmodules  Cargo.toml  FIX_REPORT.md  MIT License.txt  New_SolveIt_rust_Repo.md  README.md
physical_object_simulator/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  NOTEBOOKS.md  PLAN.md  README.md  collision_detection.md  collision_detection.tex  grammar.md  grammar.tex  physical_object_simulator.md  physical_object_simulator.tex  scene_info.md  scene_info.tex
physical_object_simulator/jupyter/: .gitignore  README.md  test_kernel.py  test_protocol.py
physical_object_simulator/jupyter/kernelspec/: kernel.json
physical_object_simulator/jupyter/posim_kernel/: __init__.py  __main__.py  kernel.py
physical_object_simulator/physical_object/: Cargo.toml
physical_object_simulator/physical_object/examples/: bouncing_ball_restitution.rs  charged_in_b_field.rs  kepler_orbit.rs  newtons_cradle.rs  outer_solar_system.rs  tumbling_body.rs
physical_object_simulator/physical_object/src/: boundary.rs  collide.rs  integrate.rs  lib.rs  linalg.rs  physical_object.rs  system.rs
physical_object_simulator/physical_object/tests/: collision.rs  conservation.rs
physical_object_simulator/posim/: Cargo.toml
physical_object_simulator/posim/src/: lexer.rs  machine.rs  main.rs  notebook.rs  parser.rs  vm.rs
physical_object_simulator/posim/src/scene/: mod.rs  scene.html  ws.rs
physical_object_simulator/scripts/collisions/: 01_head_on_exchange.posim  02_unequal_masses.posim  03_restitution_ladder.posim  04_newtons_cradle.posim  05_billiard_break.posim  06_spin_up.posim  07_thin_wall_toi.posim  08_colliding_binary.posim  09_spinning_target.posim  10_billiard_box.posim  11_box_of_shapes.posim  12_two_dumbbells.posim
src/: main.rs  solver.rs
sundials-7.7.0/: CHANGELOG.md  CITATIONS.md  CMakeLists.txt  README.md
sundials-7.7.0/benchmarks/advection_reaction_3D/: CMakeLists.txt
sundials-7.7.0/cmake/: SUNDIALSConfig.cmake.in  SundialsBuildOptionsPost.cmake  SundialsBuildOptionsPre.cmake  SundialsDeprecated.cmake  SundialsExampleOptions.cmake  SundialsSetupBenchmarks.cmake  SundialsSetupCXX.cmake  SundialsSetupCompilers.cmake  SundialsSetupTesting.cmake  SundialsTPLOptions.cmake
sundials-7.7.0/cmake/macros/: SundialsAddBenchmark.cmake
sundials-7.7.0/cmake/tpl/: SundialsSuperLUDIST.cmake
sundials-7.7.0/examples/: CMakeLists.txt
sundials-7.7.0/examples/arkode/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_lapack/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_manyvector/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_parallel/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_parhyp/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_serial/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_superludist/: CMakeLists.txt
sundials-7.7.0/examples/arkode/CXX_xbraid/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_klu/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_manyvector/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_openmp/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_openmpdev/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_parallel/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_parhyp/: CMakeLists.txt  ark_diurnal_kry_ph.out
sundials-7.7.0/examples/arkode/C_petsc/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_serial/: CMakeLists.txt
sundials-7.7.0/examples/arkode/C_superlu-mt/: CMakeLists.txt
sundials-7.7.0/examples/arkode/F2003_custom/: CMakeLists.txt
sundials-7.7.0/examples/arkode/F2003_parallel/: CMakeLists.txt
sundials-7.7.0/examples/arkode/F2003_serial/: CMakeLists.txt
sundials-7.7.0/examples/cvode/: CMakeLists.txt
sundials-7.7.0/examples/cvodes/: CMakeLists.txt
sundials-7.7.0/examples/ida/: CMakeLists.txt
sundials-7.7.0/examples/idas/: CMakeLists.txt
sundials-7.7.0/examples/idas/C_openmp/: CMakeLists.txt
sundials-7.7.0/examples/idas/F2003_serial/: CMakeLists.txt
sundials-7.7.0/examples/idas/parallel/: CMakeLists.txt
sundials-7.7.0/examples/idas/serial/: CMakeLists.txt
sundials-7.7.0/examples/kinsol/: CMakeLists.txt
sundials-7.7.0/include/nvector/: nvector_kokkos.hpp
sundials-7.7.0/include/sundials/: sundials_logger.h
sundials-7.7.0/src/arkode/: README.md  arkode.c  arkode_arkstep.c  arkode_arkstep_impl.h  arkode_arkstep_nls.c  arkode_butcher_erk.def  arkode_erkstep.c  arkode_ls.c  arkode_lsrkstep.c  arkode_lsrkstep_impl.h  arkode_lsrkstep_io.c  arkode_mristep.c  arkode_mristep_impl.h  arkode_mristep_nls.c  arkode_sprkstep.c
sundials-7.7.0/test/: testRunner
(+129 files in other folders)
